CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(Simulation)

SET(CMAKE_CXX_STANDARD 17)

SET(OpenGL_GL_PREFERENCE "GLVND")
FIND_PACKAGE( OpenGL REQUIRED )

INCLUDE_DIRECTORIES("libs/glfw/include")

SET( ENKITS_BUILD_EXAMPLES OFF CACHE BOOL "Build basic example applications" )
SET( GLFW_BUILD_EXAMPLES OFF CACHE BOOL  "GLFW lib only" )
SET( GLFW_BUILD_TESTS OFF CACHE BOOL  "GLFW lib only" )
SET( GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only" )
SET( GLFW_BUILD_INSTALL OFF CACHE BOOL  "GLFW lib only" )

ADD_SUBDIRECTORY("libs/glfw")

FIND_PACKAGE(Boost COMPONENTS regex program_options REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FILE(GLOB toCompile
  "src/*.cpp"
  "src/*.c")

ADD_EXECUTABLE(
    sim
    ${toCompile}
)

TARGET_LINK_LIBRARIES(sim
    glfw
    OpenGL::GL
    ${Boost_LIBRARIES}
    ${Boost_REGEX_LIBRARY}
    )

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(sim
    ${CMAKE_DL_LIBS}
    )
ENDIF(NOT WIN32)

ADD_CUSTOM_COMMAND(TARGET sim POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_SOURCE_DIR}/src/shaders $<TARGET_FILE_DIR:sim>/shaders)
